--- a/aula02/app.json
+++ b/aula02/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "aula01",
-    "slug": "snack-9653e454-67be-4adf-9630-8b39bbb7d562",
+    "name": "aula02",
+    "slug": "aula02",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
