--- a/aula02/package.json
+++ b/aula02/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "aula02",
+  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -7,13 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~46.0.17",
-    "expo-status-bar": "~1.4.0",
-    "react": "18.0.0",
-    "react-native": "0.69.6",
-    "react-native-paper": "4.9.2",
-    "@expo/vector-icons": "^13.0.0",
-    "expo-constants": "~13.2.4"
+    "expo": "~47.0.3",
+    "expo-status-bar": "~1.4.2",
+    "react": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-web": "~0.18.9",
+    "react-dom": "18.1.0",
+    "@expo/webpack-config": "^0.17.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
